Update logo image source path in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="logo-bar">
-            <img src="/vu.png" alt="VU Logo" class="vu-logo">
+            <img src="/static/vu.png" alt="VU Logo" class="vu-logo">
         </div>
         <h1><span class="icon">🛒</span> Grocery List Comparator</h1>
         <p class="subtitle">Easily compare grocery lists for your family.</p>
